# FDF

./: CMakeLists.txt  a.out  draw.c  fdf.h  fdf.h.gch  main.c  menu.c  options.c  read_file.c
libft/: Makefile  get_next_line.c  libft.h
minilibx_macos/: .mlx.h.swp
